# conversational-insurance-ultra

./: .cursorrules  .env.example  .gitattributes  API_Documentation.md  API_example.md  ARCHITECTURE_STATUS.md  CLAUDE.md  GETTING_STARTED.md  IMPLEMENTED_SCENARIOS.md  MCP_INSPECTOR_QUICKSTART.md  MCP_TEST_SCENARIOS.md  PAYMENT_SETUP_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_mcp_tool.py
.claude/: settings.local.json
backend/: config.py  dependencies.py  main.py
backend/api/: policies.py
backend/database/: dynamodb_client.py  mem0_client.py  neo4j_client.py  neo4j_concept_client.py  postgres_claims_client.py  postgres_client.py  supabase_client.py  vector_client.py
backend/database/scripts/: claims_data_description.md  claims_data_script.sql
backend/models/: claim.py  concept_search.py  document.py  error.py  memory.py  payment.py  policy.py  purchase.py  quotation.py  structured_policy.py
backend/routers/: __init__.py  block_4_purchase.py  concept_search.py  memory.py  quotation.py  structured_policy.py  widgets.py
backend/services/: ancileo_client.py  claims_intelligence_service.py  memory_service.py  purchase_service.py  routing_service.py  stripe_integration.py
backend/services/payment/: __init__.py  payment_pages.py  stripe_webhook.py
database/dynamodb/: create_test_data.py  init_payments_table.py  init_quotes_table.py
database/neo4j/: __init__.py
database/neo4j/policies/: ARCHITECTURE.md  MODULARIZATION_SUMMARY.md  README.md  __init__.py  pipeline.py
database/neo4j/policies/agents/: __init__.py  concept_distiller.py  concept_expander.py  concept_extractor.py  fact_extractor.py  fact_integrator.py  pair_validator.py  personality_generator.py  product_extractor.py  qa_converter.py
database/neo4j/policies/config/: generation.yaml  models.yaml  neo4j.yaml  pipeline.yaml
database/neo4j/policies/entities/: __init__.py  concept_graph.py  data_models.py
database/neo4j/policies/pdf_convert/: TravelEasy Policy QTD032212.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-000/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-001/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-002/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-003/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-004/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-005/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-006/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-007/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-008/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-009/: result.md
database/neo4j/policies/pdf_convert/Scootsurance QSR022206_updated/page-010/: result.md
database/neo4j/policies/pdf_convert/TravelEasy Policy QTD032212/: combined.md
database/neo4j/policies/raw_text/: Scootsurance QSR022206_updated.json  Scootsurance QSR022206_updated.json.bak  TravelEasy Policy QTD032212.json  TravelEasy Policy QTD032212.json.bak
database/neo4j/policies/services/: __init__.py  neo4j_service.py  ocr_service.py
database/neo4j/policies/utils/: README_LOADER.md  __init__.py  api_client.py  embedding_service.py  embedding_utils.py  file_utils.py  loader.py  neo4j_utils.py  original_text_loader.py  response_validator.py  schema.sql
database/supabase/raw_text/raw_text/: TravelEasy Pre-Ex Policy QTD032212-PX.json  product_dict.pkl
database/supabase/taxonomy/: COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  pipeline.py  utils
database/supabase/taxonomy/agents/: __init__.py  stage1_key_extractor.py  stage2_benefit_condition_extractor.py  stage2_benefit_condition_judger.py  stage2_benefit_extractor.py  stage2_benefit_judger.py  stage2_condition_extractor.py  stage2_condition_judger.py  stage2_json_validators.py  stage3_aggregator.py  stage4_benefit_condition_standardizer.py  stage4_benefit_standardizer.py  stage4_condition_standardizer.py  stage5_final_assembler.py
database/supabase/taxonomy/config/: generation.yaml  models.yaml  pipeline.yaml
database/supabase/taxonomy/data_schema/: Taxonomy_Hackathon.json
database/supabase/taxonomy/entities/: __init__.py  data_models.py
database/supabase/taxonomy/output/: final_value.json
database/supabase/taxonomy/pdf_convert/: Scootsurance QSR022206_updated.md  TravelEasy Pre-Ex Policy QTD032212-PX.md
database/supabase/taxonomy/raw_text/: product_dict.pkl
database/supabase/taxonomy/schema/: schema_original_text.sql
database/supabase/taxonomy/utils/: config.py  loader.py  models.py  original_text_embedding_service.py  original_text_loader.py  original_text_models.py  text_chunker.py
libs/ocr/fast_ocr/: __init__.py  config.py  fast_text_extract.py  test_fast_ocr.py
libs/ocr/fast_ocr/core/: __init__.py  extractor.py  ocr_engine.py
libs/ocr/fast_ocr/handlers/: __init__.py  archive_handler.py  base.py  document_handler.py  image_handler.py  pdf_handler.py  spreadsheet_handler.py  text_handler.py
libs/ocr/fast_ocr/test_files/: README.md  docker-compose.yaml  requirements.txt
libs/ocr/fast_ocr/utils/: __init__.py  file_utils.py  text_utils.py
libs/ocr/precise_ocr/: __init__.py
libs/ocr/precise_ocr/deepseek_ocr_mlx/: __init__.py  config.py  debug_utils.py  generate.py  load.py  model.py  postprocess.py  processor.py  sam_custom.py
libs/ocr/precise_ocr/utils/: __init__.py  process_pdf.py
mcp-server/: server.py
mcp-server/client/: backend_client.py
mcp_server/: server.py
mcp_server/client/: backend_client.py
mcp_server/utils/: __init__.py  country_codes.py
src/: main.py
widgets/: BUILD.md  README.md  setup-widgets.sh
widgets/payment/: README.md  index.html  package.json  vite.config.ts
widgets/payment/src/: PaymentWidget.tsx  SimplePaymentWidget.tsx  index.tsx  types.ts
(+102 files in other folders)
